# libsubnet

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: demo.c  sncalc.c
include/libsubnet/: network.h  subnet.h
src/libsubnet/: network.c  subnet.c
